# getting-started-guide-and-introduction-to-MXMACA

./: README.md  answer.md  new answer.md  开源的完整示例代码表.md  示例代码运行截图.md
chapter10/: mcBlas.c  mcDNN.cpp  mcblas命令.txt  usingThrust.cpp
chapter11/: Makefile  simple2DFD.cpp  vectorAddMultiGpus.cpp
chapter2/: helloFromGpu.c
chapter3/: cpuVectorAdd.cpp  gpuVectorAdd.cpp
chapter4/: grammar.cpp
chapter5/: Cooperative_Groups.cpp  assignKernel.cpp  information.cpp  nestedHelloWorld.cpp
chapter6/: AplusB_with_managed.cpp  AplusB_with_unified_addressing.cpp  AplusB_without_unified_addressing.cpp  BC_addKernel.cpp  NBC_addKernel2.cpp  __shfl_down_syncExample.cpp  __shfl_syncExample.cpp  __shfl_up_syncExample.cpp  __shfl_xor_syncExample.cpp  checkGlobalVariable.cpp  information.cpp  vectorAddUnifiedVirtualAddressing.cpp  vectorAddZerocopy.cpp
chapter7/: Makefile.txt  trigger_memory_violation.cpp  trigger_memory_violation_repaired.cpp  vectorAdd.cpp
chapter7/my_program/: CMakeLists.txt  main.cpp
chapter7/my_program/include/: a.h  b.h
chapter7/my_program/src/: a.cpp  b.cpp
chapter8/: myKernel.cpp  stream_parallel_execution.cpp
chapter9/: shortKernelsAsyncLaunch.cpp  shortKernelsGraphLaunch.cpp  shortKernelsSyncLaunch.cpp
common/: common.h
习题运行结果/: answer.md  nestedMandelbrot.cpp
示例代码运行截图/: 示例代码运行截图.md
